--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,8 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+SisyphusSimulator/Content/Primitive_Characters_Pack/Textures/Primitive_01/Primitive_Character_Set_01/T_Primitive_Character_Set_01_Normals.uasset
+SisyphusSimulator/Content/Primitive_Characters_Pack/Textures/Primitive_01/Primitive_Character_Set_02/T_Primitive_Character_Set_02_Normals.uasset
+SisyphusSimulator/Content/Primitive_Characters_Pack/Textures/Primitive_02/Character/T_Primitive_02_Normals.uasset
+SisyphusSimulator/Content/Primitive_Characters_Pack/Textures/Primitive_03/Character/T_Primitive_03_Normals.uasset
+SisyphusSimulator/Content/Primitive_Characters_Pack/Textures/Primitive_04/Character/T_Primitive_04_Normals.uasset
